--- a/Llamav2_7B_first_look/Llama_demo.ipynb
+++ b/Llamav2_7B_first_look/Llama_demo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPBOtcfD5qZ6lXJR5cKplUx",
+      "authorship_tag": "ABX9TyPk3Bm/HQuB+3m0yywkYu07",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5305,11 +5305,11 @@
         "    device = torch.device(\"cpu\")   # If GPU is not available, use the CPU.\n"
       ],
       "metadata": {
-        "id": "3_VeIfq_Hxk9",
-        "outputId": "75ad6c1a-0129-4eac-9fe1-afaabc9e5a21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3_VeIfq_Hxk9",
+        "outputId": "75ad6c1a-0129-4eac-9fe1-afaabc9e5a21"
       },
       "execution_count": 18,
       "outputs": [
@@ -5325,7 +5325,7 @@
     {
       "cell_type": "code",
       "source": [
-        "context=\"\"\"In 1828, Carl Friedrich Gauss proved his Theorema Egregium (remarkable theorem \\\n",
+        "context=\"\"\"[INST]In 1828, Carl Friedrich Gauss proved his Theorema Egregium (remarkable theorem \\\n",
         " in Latin), establishing an important property of surfaces. Informally, the theorem says that \\\n",
         " the curvature of a surface can be determined entirely by measuring distances along paths \\\n",
         " on the surface. That is, curvature does not depend on how the surface might be embedded in \\\n",
@@ -5338,18 +5338,18 @@
         "instruction='Summarize the context in 10 words.'\n",
         "prompt=f\"\"\"You are given context and you are to forllow the instruction if answer is available in the context, else politely decline. \\n\n",
         "Context: {context} \\n\n",
-        "Instruction: {instruction}\"\"\"\n",
+        "Instruction: {instruction}\\n[\\INST]\"\"\"\n",
         "Markdown(prompt)"
       ],
       "metadata": {
-        "id": "U9sNfrBpIMod",
-        "outputId": "74dd91d4-d7b9-4fbb-c161-933f6228bbb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
-        }
+        },
+        "id": "U9sNfrBpIMod",
+        "outputId": "b1b5a0c9-5cf4-48e4-8653-b82eacf1fab9"
       },
-      "execution_count": 46,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5357,17 +5357,17 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "You are given context and you are to forllow the instruction if answer is available in the context, else politely decline. \n\nContext: In 1828, Carl Friedrich Gauss proved his Theorema Egregium (remarkable theorem  in Latin), establishing an important property of surfaces. Informally, the theorem says that  the curvature of a surface can be determined entirely by measuring distances along paths  on the surface. That is, curvature does not depend on how the surface might be embedded in  3-dimensional space. See Differential geometry of surfaces. Bernhard Riemann extended Gauss's  theory to higher-dimensional spaces called manifolds in a way that also allows distances and angles  to be measured and the notion of curvature to be defined, again in a way that is intrinsic to the manifold  and not dependent upon its embedding in higher-dimensional spaces. Albert Einstein used the theory of pseudo-Riemannian  manifolds (a generalization of Riemannian manifolds) to develop his general theory of relativity.  In particular, his equations for gravitation are constraints on the curvature of spacetime. \n\nInstruction: Summarize the context in 10 words."
+            "text/markdown": "You are given context and you are to forllow the instruction if answer is available in the context, else politely decline. \n\nContext: [INST]In 1828, Carl Friedrich Gauss proved his Theorema Egregium (remarkable theorem  in Latin), establishing an important property of surfaces. Informally, the theorem says that  the curvature of a surface can be determined entirely by measuring distances along paths  on the surface. That is, curvature does not depend on how the surface might be embedded in  3-dimensional space. See Differential geometry of surfaces. Bernhard Riemann extended Gauss's  theory to higher-dimensional spaces called manifolds in a way that also allows distances and angles  to be measured and the notion of curvature to be defined, again in a way that is intrinsic to the manifold  and not dependent upon its embedding in higher-dimensional spaces. Albert Einstein used the theory of pseudo-Riemannian  manifolds (a generalization of Riemannian manifolds) to develop his general theory of relativity.  In particular, his equations for gravitation are constraints on the curvature of spacetime. \n\nInstruction: Summarize the context in 10 words.\n[\\INST]"
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 49
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "prompt=\"\"\"Use the given question to guide your summary about the context. If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+        "prompt=\"\"\"[INST]Use the given question to guide your summary about the context. If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
         "Question: Summarize Topic X\n",
         "Context:\n",
         "When talking about Topic X, Scenario Y is always referred to. This is due to the relation of\n",
@@ -5398,11 +5398,11 @@
         "print(prompt)"
       ],
       "metadata": {
-        "id": "mveHestWOZ2L",
-        "outputId": "6acc2a30-9dcb-4344-9d2d-87761af7a694",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mveHestWOZ2L",
+        "outputId": "6acc2a30-9dcb-4344-9d2d-87761af7a694"
       },
       "execution_count": 47,
       "outputs": [
@@ -5438,12 +5438,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 315
+          "height": 211
         },
         "id": "jSP-70C-cre5",
-        "outputId": "11df3710-e0bf-417d-9e3e-92b49de883a6"
+        "outputId": "2347241f-95e6-4502-db21-fb4327813904"
       },
-      "execution_count": 48,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5451,10 +5451,10 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "###[INST] <<SYS>>\nYou are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe.  Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\n\nIf a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\n<</SYS>>\n\nYou are given context and you are to forllow the instruction if answer is available in the context, else politely decline. \n\nContext: In 1828, Carl Friedrich Gauss proved his Theorema Egregium (remarkable theorem  in Latin), establishing an important property of surfaces. Informally, the theorem says that  the curvature of a surface can be determined entirely by measuring distances along paths  on the surface. That is, curvature does not depend on how the surface might be embedded in  3-dimensional space. See Differential geometry of surfaces. Bernhard Riemann extended Gauss's  theory to higher-dimensional spaces called manifolds in a way that also allows distances and angles  to be measured and the notion of curvature to be defined, again in a way that is intrinsic to the manifold  and not dependent upon its embedding in higher-dimensional spaces. Albert Einstein used the theory of pseudo-Riemannian  manifolds (a generalization of Riemannian manifolds) to develop his general theory of relativity.  In particular, his equations for gravitation are constraints on the curvature of spacetime. \n\nInstruction: Summarize the context in 10 words. [/INST]\nGauss proved Theorema Egregium, Riemann extended it to manifolds, Einstein used it for general relativity."
+            "text/markdown": "###You are given context and you are to forllow the instruction if answer is available in the context, else politely decline. \n\nContext: [INST]In 1828, Carl Friedrich Gauss proved his Theorema Egregium (remarkable theorem  in Latin), establishing an important property of surfaces. Informally, the theorem says that  the curvature of a surface can be determined entirely by measuring distances along paths  on the surface. That is, curvature does not depend on how the surface might be embedded in  3-dimensional space. See Differential geometry of surfaces. Bernhard Riemann extended Gauss's  theory to higher-dimensional spaces called manifolds in a way that also allows distances and angles  to be measured and the notion of curvature to be defined, again in a way that is intrinsic to the manifold  and not dependent upon its embedding in higher-dimensional spaces. Albert Einstein used the theory of pseudo-Riemannian  manifolds (a generalization of Riemannian manifolds) to develop his general theory of relativity.  In particular, his equations for gravitation are constraints on the curvature of spacetime. \n\nInstruction: Summarize the context in 10 words.\n[\\INST]  Gauss proved a theorem, Riemann extended it, Einstein used it."
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 50
         }
       ]
     },
@@ -5464,12 +5464,12 @@
         "Markdown('Hello \\n\\n')"
       ],
       "metadata": {
-        "id": "ggUK2OflGV5z",
-        "outputId": "6c3c1298-5910-4b77-fcb5-019c5c660046",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 46
-        }
+        },
+        "id": "ggUK2OflGV5z",
+        "outputId": "6c3c1298-5910-4b77-fcb5-019c5c660046"
       },
       "execution_count": 12,
       "outputs": [
