--- a/Prompt_Engineering/LLM_UI_and_Cust_chain.ipynb
+++ b/Prompt_Engineering/LLM_UI_and_Cust_chain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMxMoP+aTkyjtG0LiaFLOKO",
+      "authorship_tag": "ABX9TyMRUoodVG8y672nk8Wvzzjp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9651,7 +9651,9 @@
       "source": [
         "!pip install streamlit\n",
         "!pip install pyngrok\n",
-        "!pip install hugchat"
+        "!pip install hugchat\n",
+        "\n",
+        "!pip install pypdf2"
       ],
       "metadata": {
         "colab": {
@@ -10667,7 +10669,9 @@
         "from langchain.text_splitter import CharacterTextSplitter\n",
         "from langchain.vectorstores import FAISS\n",
         "from langchain.document_loaders import TextLoader\n",
-        "from langchain.document_loaders import PyPDFLoader\n",
+        "#from langchain.document_loaders import PyPDFLoader\n",
+        "from PyPDF2 import PdfReader\n",
+        "\n",
         "from langchain.document_loaders import UnstructuredURLLoader\n",
         "from langchain.document_loaders import UnstructuredPDFLoader\n",
         "from langchain.document_loaders import PDFMinerPDFasHTMLLoader\n",
@@ -10705,10 +10709,23 @@
         "\n",
         "  tokenizer = AutoTokenizer.from_pretrained(model_name, trust_remote_code=True)\n",
         "  tokenizer.pad_token = tokenizer.eos_token\n",
-        "  sys_prompt=\"\"\"<<SYS>>You are an honest assistant , who gives factually correct answers.<</SYS>>\"\"\"\n",
+        "  sys_prompt=\"\"\"<<SYS>>You are an honest assistant , who gives factually correct answers if context is provided else you answer on your own.<</SYS>>\"\"\"\n",
         "  chain=Cust_Chain_obj(model,tokenizer,None,sys_prompt)\n",
         "  return chain\n",
+        "\n",
         "chain=load_model()\n",
+        "uploaded_file = st.file_uploader(\"Choose a file\")\n",
+        "up_file=False\n",
+        "st.write(uploaded_file)\n",
+        "\n",
+        "\n",
+        "if (uploaded_file is not None):\n",
+        "  p=PdfReader(uploaded_file)\n",
+        "  st.write(uploaded_file)\n",
+        "  chain.load_pdf_doc(uploaded_file)\n",
+        "  chain.populate_vector_store()\n",
+        "\n",
+        "\n",
         "with st.sidebar:\n",
         "  st.title('🤗💬 HugChat')\n",
         "  st.success('Proceed to entering your prompt message!', icon='👉')\n",
@@ -10751,9 +10768,72 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qWRP1Kq2XKLY",
-        "outputId": "45e49bc3-e8a1-435d-95c0-b9562c97ff73"
+        "outputId": "8d6855d5-4c66-4f0d-d265-b2417ee76f44"
       },
-      "execution_count": 7,
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting chatbot.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile chatbot.py\n",
+        "\n",
+        "\n",
+        "\n",
+        "import streamlit as st\n",
+        "\n",
+        "from PyPDF2 import PdfReader\n",
+        "\n",
+        "\n",
+        "# Sidebar contents\n",
+        "with st.sidebar:\n",
+        "    st.title('🤗💬 LLM Chat App')\n",
+        "    st.markdown('''\n",
+        "    ## About\n",
+        "    This app is an LLM-powered chatbot built using:\n",
+        "    - [Streamlit](https://streamlit.io/)\n",
+        "    - [LangChain](https://python.langchain.com/)\n",
+        "    - [OpenAI](https://platform.openai.com/docs/models) LLM model\n",
+        " ''')\n",
+        "    st.write('Made with ❤️ by [Prompt Engineer](https://youtube.com/@engineerprompt)')\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    st.header(\"Chat with PDF 💬\")\n",
+        "\n",
+        "\n",
+        "    # upload a PDF file\n",
+        "    pdf = st.file_uploader(\"Upload your PDF\", type='pdf')\n",
+        "\n",
+        "    # st.write(pdf)\n",
+        "    if pdf is not None:\n",
+        "        pdf_reader = PdfReader(pdf)\n",
+        "\n",
+        "        text = \"\"\n",
+        "        for page in pdf_reader.pages:\n",
+        "            text += page.extract_text()\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zV0oTqKRxDsQ",
+        "outputId": "dd7f3c1f-74ce-4948-df4a-96b26f0fb413"
+      },
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -10799,29 +10879,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h7tCqOO4kRlt",
-        "outputId": "60a90ef0-f914-4b10-eae3-c8aee8d7cc14"
+        "outputId": "71843371-3290-49fa-a50c-52decf8a168f"
       },
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "nohup: appending output to 'nohup.out'\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:pyngrok.process.ngrok:t=2023-08-17T17:35:47+0000 lvl=warn msg=\"ngrok config file found at legacy location, move to XDG location\" xdg_path=/root/.config/ngrok/ngrok.yml legacy_path=/root/.ngrok2/ngrok.yml\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "NgrokTunnel: \"https://9fb0-34-143-162-45.ngrok-free.app\" -> \"http://localhost:200\"\n"
+            "nohup: appending output to 'nohup.out'\n",
+            "NgrokTunnel: \"https://d4b0-34-143-162-45.ngrok-free.app\" -> \"http://localhost:200\"\n"
           ]
         }
       ]
